--- a/AXAPI/config.php.example
+++ b/AXAPI/config.php.example
@@ -184,14 +184,39 @@ define("USERHANDLER_NAME", 'UserHandler');
 /** 常量类，提供了遍历类中所有常量的方法 */
 class CONST_CLASS
 {
+    /** 取出所有变量 */
     public static function getAllConstants()
     {
         $oClass = new ReflectionClass(get_called_class());
         $constants = $oClass->getConstants();
         return array_values($constants);
     }
+
+    /** 取出指定变量的描述，继承时需要重写 */
+    public static function getStr($pConst)
+    {
+        return $pConst;
+    }
+
+    /** 取出所有变量=>描述的字典 */
+    public static function getAllStrsOfConstants()
+    {
+        $list = array();
+        foreach (static::getAllConstants() as $pConst) {
+            $list[$pConst] = static::getStr($pConst);
+        }
+        return $list;
+    }
 }
 
+
+class SMS_USEFOR extends CONST_CLASS
+{
+    const REGISTER    = 1;//注册用验证码
+    const LOGIN       = 2;//登陆用验证码
+    const RESTPWD     = 3;//找回密码用验证码
+    const RESTTEL     = 4;//修改手机号用验证码
+}
 
 /** 专用的ERROR_CODE类，同时提供了描述文本 */
 class ERROR_CODE
@@ -216,7 +241,7 @@ class ERROR_CODE
     public static $ORDER_VALUE_ERROR    = array(16, '请使用正确的排序方案。',       'ORDER_VALUE_ERROR');
     public static $NO_TBALE_FOUND       = array(17, '没有对应的表存在',       'NO_TBALE_FOUND');
     public static $ONLY_ADMIN_ALLOW     = array(18, '仅限管理员使用此功能。',       'ONLY_ADMIN_ALLOW');
-
+    public static $ONLY_VISITOR_ALLOW   = array(19, '您已登录，不可重复登录。',       'ONLY_VISITOR_ALLOW');
 
     //实际开发过程中，可以继续自定义更多的错误类型
     public static $LOGLIST_TYPE_WRONG   = array(101, '错误的日志类型',       'LOGLIST_TYPE_WRONG');
@@ -255,11 +280,3 @@ class ERROR_CODE
 
 }
 
-
-
-class SMS_USEFOR extends CONST_CLASS
-{
-    const REGISTER    = 1;//注册用验证码
-    const LOGIN       = 2;//登陆用验证码
-    const RESTPWD     = 3;//找回密码用验证码
-}
