+ 3.0开工 ＋ 统一放置模块文件到独立模块文件夹下。

--- a/AXAPI/config.php.example
+++ b/AXAPI/config.php.example
@@ -22,7 +22,7 @@ else
 
 //加载类 并注册自动加载事件。
 require_once(AXAPI_ROOT_PATH.'/components/autoload.php');
-require_once(AXAPI_ROOT_PATH.'/mhc/models/HaoResult.php');
+require_once(AXAPI_ROOT_PATH.'/components/HaoResult.php');
 
 
 /** API项目名（最好全网唯一）   */  define('AXAPI_PROJECT_NAME', 'project-haoframe' );
